--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   "author": "danadum",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-better-sqlite3": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.6.2",
+    "cors": "^2.8.6",
     "express": "^4.18.2",
     "fast-xml-parser": "^4.2.4",
+    "jsonwebtoken": "^9.0.3",
+    "prisma": "^7.3.0",
     "ws": "^8.13.0"
   }
 }
